cmake_minimum_required(VERSION 3.4)

project(stout)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

set(STOUT_TEST_DEPENDENCIES
    ${STOUT_TEST_DEPENDENCIES}
    ""
)

set(STOUT_TEST_INCLUDE_DIRS
    ${STOUT_TEST_INCLUDE_DIRS}
    ${CMAKE_SOURCE_DIR}/include
)

find_package(Apr REQUIRED)
list(APPEND STOUT_TEST_INCLUDE_DIRS ${APR_INCLUDE_DIR})
list(APPEND STOUT_TEST_DEPENDENCIES ${APR_LIB})
list(APPEND STOUT_TEST_INCLUDE_DIRS ${APRUTIL_INCLUDE_DIR})
list(APPEND STOUT_TEST_DEPENDENCIES ${APRUTIL_LIB})

find_package(Svn REQUIRED)
list(APPEND STOUT_TEST_INCLUDE_DIRS ${SVN_INCLUDE_DIR})
list(APPEND STOUT_TEST_DEPENDENCIES ${SVN_LIB})

find_package(Boost REQUIRED)
list(APPEND STOUT_TEST_INCLUDE_DIRS ${Boost_INCLUDE_DIRS})
list(APPEND STOUT_TEST_DEPENDENCIES ${Boost_LIBRARIES})

find_package(Protobuf REQUIRED)
list(APPEND STOUT_TEST_INCLUDE_DIRS ${PROTOBUF_INCLUDE_DIRS})
list(APPEND STOUT_TEST_DEPENDENCIES ${PROTOBUF_LIBRARIES})

find_package(GLog REQUIRED)
list(APPEND STOUT_TEST_INCLUDE_DIRS ${GLOG_INCLUDE_DIRS})
list(APPEND STOUT_TEST_DEPENDENCIES ${GLOG_LIBRARIES})

find_package(GTest REQUIRED)
list(APPEND STOUT_TEST_INCLUDE_DIRS ${GTEST_INCLUDE_DIRS})
list(APPEND STOUT_TEST_DEPENDENCIES ${GTEST_LIBRARIES})

find_package(GMock REQUIRED)
list(APPEND STOUT_TEST_INCLUDE_DIRS ${GMOCK_INCLUDE_DIRS})
list(APPEND STOUT_TEST_DEPENDENCIES ${GMOCK_LIBRARIES})

find_package(Picojson REQUIRED)
list(APPEND STOUT_TEST_INCLUDE_DIRS ${PICOJSON_INCLUDE_DIRS})

#set(CXX_FLAGS_EXTRA "-std=c++11")

set(CMAKE_CXX_FLAGS "-std=c++11")

if(APPLE)
    #set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
    #set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
    # GTEST on OSX needs its own tr1 tuple.
    #add_definitions(-DGTEST_USE_OWN_TR1_TUPLE=1 -DGTEST_LANG_CXX11)
endif(APPLE)

include_directories(${STOUT_TEST_INCLUDE_DIRS})

file(
    GLOB_RECURSE
    INC_FILES
    include/*
)

install(FILES ${INC_FILES} DESTINATION include)

enable_testing()

file(
    GLOB_RECURSE
    TEST_FILES
    tests/*
)

if(NOT LINUX)
    list(REMOVE_ITEM TEST_FILES ${CMAKE_SOURCE_DIR}/tests/proc_tests.cpp)
endif(NOT LINUX)

add_executable(
    stout-test
    ${TEST_FILES}
)

target_link_libraries(stout-test ${STOUT_TEST_DEPENDENCIES})
